# monolith-vs-microservice-thesis

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  buf.gen.yaml  go.work  openapi.yaml
buildspec/: buildspec.images.yml
tools/report-generator/: .gitignore  README.md  pyproject.toml  report-generator.example.toml
tools/report-generator/src/report_generator/: cli.py  consolidate.py  styles.py
tools/report-generator/src/report_generator/datadog/: __init__.py  __main__.py  charts.py  cli.py  config.py  datadog_client.py  metrics.py  table_images.py  tables.py  timing.py
tools/report-generator/src/report_generator/k6/: __init__.py  __main__.py  aggregation.py  charts.py  cli.py  config.py  exceptions.py  models.py  parser.py  pipeline.py  status_summary.py  suite_loader.py  table_images.py  tables.py  utils.py  writer.py
tools/report-generator/src/report_generator/k6/sources/: local.py  s3.py
tools/report-generator/tests/: __init__.py  conftest.py  test_cli.py  test_consolidate.py  test_metrics.py  test_s3_source.py  test_suite_loader.py  test_tables_and_charts.py
tools/report-generator/tests/fixtures/: .gitignore
tools/report-generator/tests/fixtures/sample-run/_suite/: summary.json
tools/report-generator/tests/fixtures/sample-run/microservices/login/100rps/attempt-01/: metadata.json  summary.json
tools/report-generator/tests/fixtures/sample-run/microservices/login/50rps/attempt-01/: metadata.json  summary.json
tools/report-generator/tests/fixtures/sample-run/monolith/login/100rps/attempt-01/: metadata.json  summary.json  thresholds.json
(+572 files in other folders)
