[project]
name = "report-generator"
version = "0.1.0"
description = "Unified reporting and chart generator for k6 and Datadog results (RQ1 & RQ2)"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Ahmad Mufied" }
]
dependencies = [
  "awscrt>=0.21",
  "boto3>=1.34",
  "matplotlib>=3.8",
  "numpy>=2.0",
  "pandas>=2.2",
  "pydantic>=2.7",
  "scipy>=1.14",
  "requests>=2.31",
  "tabulate>=0.9.0",
]

[project.scripts]
k6-report-generator = "report_generator.cli:k6_main"
datadog-reporter = "report_generator.cli:datadog_main"
report-generator = "report_generator.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/report_generator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
